# fool2048

./: .gitignore  CMakeLists.txt  LICENSE  README.md  check_code_style.sh  fool2048.sh  log4cplus.properties  run.sh
src/: CMakeLists.txt  def.h  log_util.cc  log_util.h  main.cc  rand_util.cc  rand_util.h
src/board/: adding_number_move.h  board.cc  board.h  board_helper.cc  board_helper.h  def.h  force.h  full_board.cc  full_board.h  full_board_game.cc  full_board_game.h  full_board_helper.cc  full_board_helper.h  location.h  location_helper.cc  location_helper.h  number.h  number_util.cc  number_util.h  orientation.cc  orientation.h  zobrist_hash_factor.cc  zobrist_hash_factor.h
src/board/location/: location.h  location_helper.cc  location_helper.h  orientation.cc  orientation.h
src/game/: auto_game.cc  auto_game.h  game.cc  game.h  human_game.cc  human_game.h  loggable_game.cc  loggable_game.h  monte_carlo_game.cc  monte_carlo_game.h  new_game_builder.h
src/player/: adding_number_player.h  adding_number_randomly_player.cc  adding_number_randomly_player.h  default_adding_number_player.cc  default_adding_number_player.h  human_moving_player.cc  human_moving_player.h  moving_player.h  moving_randomly_player.cc  moving_randomly_player.h  node_record.cc  player.h  random_adding_number_player.cc  random_adding_number_player.h  uct_player.cc  uct_player.h
test/: example_boards_test.h  rand_util_test.cc
test/board/: board_helper_test.cc  board_test.cc  full_board_game_test.cc  full_board_test.cc  full_board_testable.cc  full_board_testable.h  full_board_testable_builder.h  location_helper_test.cc  number_util_test.cc  zobrist_hash_factor_test.cc
test/board/location/: location_helper_test.cc
test/game/: monte_carlo_game_test.cc  monte_carlo_game_testable.cc  monte_carlo_game_testable.h
test/player/: adding_number_randomly_player_test.cc  default_adding_number_player_test.cc  moving_randomly_player_test.cc  random_adding_number_player_test.cc  uct_player_test.cc  uct_player_testable.h
